# luajavademo

./: settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/chenmin/luajavademo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: test.lua
app/src/main/java/com/example/chenmin/luajavademo/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/chenmin/luajavademo/: ExampleUnitTest.java
luajava/: build.gradle
luajava/src/androidTest/java/com/example/luajava/: ExampleInstrumentedTest.java
luajava/src/main/: AndroidManifest.xml
luajava/src/main/java/com/example/luajava/luajava/: CPtr.java  Console.java  JavaFunction.java  LuaException.java  LuaInvocationHandler.java  LuaJavaAPI.java  LuaObject.java  LuaState.java  LuaStateFactory.java
luajava/src/main/jni/: Application.mk
luajava/src/main/jni/luajava/: Android.mk  luajava.c  luajava.h
luajava/src/test/java/com/example/luajava/: ExampleUnitTest.java
